style: changed app width from vw to percent to avoid scrollbar causing horrizontal overflow

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -6,7 +6,7 @@
   text-align: center;
   /* background-color: #282c34; */
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .App-logo {
